# AndroidJscGL

./: gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/fex/momo/com/androidjscgl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: gl-sample.js
app/src/main/asssets/: gl-sample.js
app/src/main/cpp/: main.cpp  native-lib.cpp  native-lib.h
app/src/main/cpp/include/: jsc.h
app/src/main/cpp/include/jsc/: JSObjectRef.h  JSStringRef.h  JSTypedArrayRef.h  JSValueRef.h  JavaScript.h
app/src/main/java/fex/momo/com/androidjscgl/: FileUtils.java  MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/fex/momo/com/androidjscgl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
